add nav bar loading from assigned or from shuffled library

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div id="header">
             <!-- app title goes here -->
-            <button id="gimme">Gimme Some Missions!</button>
+            <button id="gimme">Get More Missions!</button>
         </div>
         <div id="mission-collection">
             <!-- navigate between missions here -->
