add click menu to show detail image

--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     </head>
     <body>
         <div id="header">
-            <!-- app title goes here -->
-            <button id="gimme">Get More Missions!</button>
+            <span id="headline">Random Acts of Random</span>
+            <p>Mission generator and tracker</p>
+            <button id="gimme">Add a New Mission!</button>
         </div>
         <div id="mission-collection">
             <!-- navigate between missions here -->
         </div>
         <div id="mission-detail">
             <!-- stuff about selected mission -->
-            <img src="assets/icon-charity.png" />
+            <img id="detail-image" src="assets/RAoR.png" />
         </div>
         <div id="mission-mod-menu">
             <!-- mark complete, add different image -->
