why were there uncommitted changes when I just committed?

--- a/index.html
+++ b/index.html
@@ -28,9 +28,15 @@
             <!-- <br clear="all" /> -->
         </div>
         <div id="mission-mod-menu">
-            modify mission
-            <button id="mission-complete">mark completed</button>
-            <!-- mark complete, add different image -->
+            add custom image:
+            <form id="add-custom-image">
+                <label for="add-url">image URL</label>
+                <input type="text" id="add-url">
+                <input type="submit" id="submit-image">
+            </form>
+            <hr />
+            <button id="mission-complete">mark mission complete</button>
+
         </div>
     </body>
 </html>
