--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
         <div id="header">
             <span id="headline">Random Acts of Random</span>
             <p>Mission generator and tracker</p>
-            <button id="gimme">Get All New Missions!</button>
-            <input type="checkbox" id="are-you-sure">
-            <label for="are-you-sure">confirm</label>
+            <button id="gimme">Get Random Missions!</button>
         </div>
         <div id="mission-collection">
             click a mission to see details:
