add custom image functionality persistent whoops forgot to make new branch

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <!-- <br clear="all" /> -->
         </div>
         <div id="mission-mod-menu">
-            add custom image:
+            add/change custom image:
             <form id="add-custom-image">
                 <label for="add-url">image URL</label>
                 <input type="text" id="add-url">
@@ -34,6 +34,8 @@
             </form>
             <hr />
             <button id="mission-complete">mark mission complete</button>
+            <!-- mission-delete is a stretch goal! -->
+            <button id="mission-delete">don't show this mission again</button>
 
         </div>
     </body>
