i see a different page in my browser than I see in VSC even though I reopened everything.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div id="header">
             <span id="headline">Random Acts of Random</span>
             <p>Mission generator and tracker</p>
-            <button id="gimme">Get Random Missions!</button>
+            <button id="gimme">Get New Missions!</button>
         </div>
         <div id="mission-collection">
             click a mission to see details:
