--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     </head>
     <body>
         <div id="header">
-            <span id="headline">Random Acts of Random</span>
+            <span id="headline">Random Acts of Random </span>
             <p>Mission generator and tracker</p>
-            <button id="gimme">Get New Missions!</button>
+            <button id="gimme">Get All New Missions!</button>
         </div>
         <div id="mission-collection">
             click a mission to see details:
